--- a/src/static/style/px-to-rem.scss
+++ b/src/static/style/px-to-rem.scss
@@ -9,17 +9,19 @@ $scss_6px: 6rem / $scss_html-font-size;
 $scss_7px: 7 / $scss_html-font-size;
 $scss_8px: 8rem / $scss_html-font-size;
 $scss_9px: 9 / $scss_html-font-size;
+
 $scss_10px: 10rem / $scss_html-font-size;
-$scss_11px: 11 / $scss_html-font-size;
+$scss_11px: 11rem / $scss_html-font-size;
 $scss_12px: 12rem / $scss_html-font-size;
 $scss_14px: 14rem / $scss_html-font-size;
-$scss_15px: 15 / $scss_html-font-size;
+$scss_15px: 15rem / $scss_html-font-size;
 $scss_16px: 16rem / $scss_html-font-size;
-$scss_18px: 18 / $scss_html-font-size;
+$scss_18px: 18rem / $scss_html-font-size;
+
 $scss_20px: 20rem / $scss_html-font-size;
 $scss_22px: 22rem / $scss_html-font-size;
 $scss_24px: 24rem / $scss_html-font-size;
-$scss_25px: 25 / $scss_html-font-size;
+$scss_25px: 25rem / $scss_html-font-size;
 $scss_26px: 26rem / $scss_html-font-size;
 $scss_28px: 28rem / $scss_html-font-size;
 $scss_30px: 30rem / $scss_html-font-size;
@@ -33,11 +35,14 @@ $scss_42px: 42rem / $scss_html-font-size;
 $scss_44px: 44rem / $scss_html-font-size;
 $scss_46px: 46rem / $scss_html-font-size;
 $scss_48px: 48rem / $scss_html-font-size;
+
 $scss_50px: 50rem / $scss_html-font-size;
 $scss_52px: 52rem / $scss_html-font-size;
 $scss_54px: 54rem / $scss_html-font-size;
 $scss_56px: 56rem / $scss_html-font-size;
+$scss_57px: 57rem / $scss_html-font-size;
 $scss_58px: 58rem / $scss_html-font-size;
+
 $scss_60px: 60rem / $scss_html-font-size;
 $scss_62px: 62rem / $scss_html-font-size;
 $scss_64px: 64rem / $scss_html-font-size;
@@ -85,6 +90,7 @@ $scss_146px: 146rem / $scss_html-font-size;
 $scss_148px: 148rem / $scss_html-font-size;
 
 $scss_150px: 150rem / $scss_html-font-size;
+$scss_152px: 152rem / $scss_html-font-size;
 $scss_158px: 158rem / $scss_html-font-size;
 
 $scss_160px: 160rem / $scss_html-font-size;
