--- a/src/static/style/common.scss
+++ b/src/static/style/common.scss
@@ -11,6 +11,7 @@ html {
         sans-serif;
     overflow: auto;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    /*滑动卡顿*/
     -webkit-overflow-scrolling: touch;
 }
 
@@ -80,13 +81,6 @@ i.icon {
 #app {
     width: 100%;
     height: 100%;
-}
-
-#app>div {
-    width: 100%;
-    min-height: 100%;
-    position: relative;
-    font-weight: 500;
 }
 
 /********************************************************/
