--- a/src/static/style/px-to-rem.scss
+++ b/src/static/style/px-to-rem.scss
@@ -127,7 +127,11 @@ $scss_320px: 320rem / $scss_html-font-size;
 $scss_325px: 325rem / $scss_html-font-size;
 $scss_326px: 326 / $scss_html-font-size;
 $scss_366px: 366rem / $scss_html-font-size;
+$scss_384px: 384rem / $scss_html-font-size;
 $scss_400px: 400 / $scss_html-font-size;
+$scss_406px: 406rem / $scss_html-font-size;
+$scss_420px: 420rem / $scss_html-font-size;
+$scss_480px: 480rem / $scss_html-font-size;
 $scss_407px: 407 / $scss_html-font-size;
 $scss_465px: 465 / $scss_html-font-size;
 $scss_470px: 470 / $scss_html-font-size;
